# soundcloud-challenge

./: .gitignore  .travis.yml  README.md  build.sbt  compare-algos.sh  soundcloud-challenge.cabal
misc/: res.txt  test.txt
src/main/haskell/: Mapper  Mapper.hs  MapperAdjacencyList  MapperAdjacencyList.hs  MapperIterate  MapperIterate.hs  MapperOneStep  MapperOneStep.hs  Reducer  Reducer.hs  ReducerAdjacencyList  ReducerAdjacencyList.hs  ReducerFinal  ReducerFinal.hs  ReducerIterate  ReducerIterate.hs  ReducerOneStep  ReducerOneStep.hs  Util.hs
src/main/prolog/: soundcloud.pl
src/main/scala/info.folone/: package.scala
src/main/scala/info.folone/soundcloud/: Algorithmic.scala
