name:             soundcloud-challenge
version:          0.1
build-type:       Simple
cabal-version:    >= 1.2

library
  build-depends:  split
  build-depends:  base >= 4 && <= 5

executable mapper-adjacency
  hs-source-dirs: src/main/haskell
  main-is:        MapperAdjacencyList.hs

executable mapper-iterate
  hs-source-dirs: src/main/haskell
  main-is:        MapperIterate.hs

executable reducer-adjacency
  hs-source-dirs: src/main/haskell
  main-is:        ReducerAdjacencyList.hs

executable reducer-iterate
  hs-source-dirs: src/main/haskell
  main-is:        ReducerIterate.hs

executable reducer-final 
  hs-source-dirs: src/main/haskell
  main-is:        ReducerFinal.hs
